# myweb-analytics

./: .env.example  .gitignore  PHASE2_SUMMARY.md  README.md  docker-compose.yml  project-scope.md  requirements.txt
backend/: README.md  SETUP.md  pyproject.toml
backend/database/: __init__.py  connection.py  models.py
backend/log_processor/: __init__.py  enrichment.py  loader.py  parser.py  session_builder.py
backend/scripts/: generate_sample_logs.py  process_logs.py  test_connection.py
database/: connection.py
infrastructure/: README.md  analytics_stack.py  app.py  pyproject.toml  requirements.txt
scripts/: init_database.py
streamlit_app/: README.md  pyproject.toml
