[project]
name = "backend"
version = "0.1.0"
description = "Analytics dashboard backend for CloudFront log processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.1",
    "boto3>=1.40.69",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
    "user-agents>=2.2.0",
    "geoip2>=4.8.0",
    "faker>=28.0.0",
]
